<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Welcome"
    android:textSize="20sp"
    android:layout_marginTop="60dp"
    android:layout_marginStart="10dp"
    android:textColor="#000000"
    android:textStyle="bold"
/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_cont"
        android:layout_marginTop="90dp"
        android:layout_marginStart="10dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="150dp"
        android:hint="@string/hint_username"
        android:padding="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="text"
        android:autofillHints="password"

/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="200dp"
        android:hint="@string/password"
        android:padding="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edit_text"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/Get_Start"
        android:textAllCaps="false"
        android:background="@drawable/custom_bg_btn"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="300dp"

        />
    <TextView
        android:id="@+id/tv_do_not_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Do_not_Have_an_Account"
        android:layout_marginTop="370dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:layout_marginTop="370dp"
        android:textColor="#6153C3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/tv_do_not_have_an_account"
        android:layout_toRightOf="@+id/tv_do_not_have_an_account"
        />
</RelativeLayout>