<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/Sign_Up_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_Up_Title"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/create_a_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_a_New_Account"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/Sign_Up_Title"
        />
    <EditText
        android:id="@+id/et_sign_up_full_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:hint="@string/Full_Name"
        android:layout_below="@+id/create_a_new_account"
        android:padding="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/custom_edit_text"
        android:inputType="text"
        android:autofillHints="password"
        />
    <EditText
        android:id="@+id/et_sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Email"
        android:layout_below="@+id/et_sign_up_full_name"
        android:padding="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_edit_text"
        />
    <EditText
        android:id="@+id/et_sign_up_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:layout_below="@+id/et_sign_up_email"
        android:padding="7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textPassword"
        android:background="@drawable/custom_edit_text"
        />
    <Button
        android:id="@+id/et_btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/Sign_up"
        android:layout_below="@+id/et_sign_up_password"
        android:textAllCaps="false"
        android:background="@drawable/custom_bg_btn"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:id="@+id/tv_already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="15sp"
        android:layout_below="@+id/et_btn_sign_up"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        />
    <TextView
        android:id="@+id/tv_sign_up_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sign_in"
        android:layout_below="@+id/et_btn_sign_up"
        android:layout_marginTop="30sp"
        android:textColor="#6153C3"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@id/tv_already_have_an_account"
        android:layout_toRightOf="@id/tv_already_have_an_account"
        />
</RelativeLayout>